# Factroll

./: .env.example  ARCHITECTURE_ASSESSMENT.md  MEMORY_EXAMPLE.md  PLAN.md  PLAN_WEB_APP.md  PROJECT_INSTRUCTIONS.md  alembic.ini  backlog_20260415.jsx  pyproject.toml
archive/: README.md
factroll/: config.py  main.py
factroll/core/: engine.py  models.py
factroll/db/: models.py  session.py
factroll/mcp/: auth.py  server.py
factroll/schemas/: actions.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
